added dependend files to elastic_helper.py execution + trial and errors attempts / comments