@@ -8,6 +8,7 @@ docker build -t elastic-dev .
 
 # run container
 docker run -p 9200:9200 -p 9300:9300 -e "discovery.type=single-node" --name "elastic-dev" elastic-dev &
+#docker run -p 9200:9200 -p 9300:9300 -e 'discovery.type=single-node' -e 'ES_JAVA_OPTS=-Xlog:gc*,gc+age=trace,safepoint:stdout:utctime,pid,tags:' --name "elastic-dev" elastic-dev &
 
 # wait until elasticsearch started
 echo "waiting until elasticsearch is up"
@@ -19,4 +20,5 @@ do
 done
 
 # run elastic.py script inside the container
-docker exec elastic-dev python3 /app/elasticsearch_helper.py /art_ontology.json
+docker exec elastic-dev python3 /app/upload_to_elasticsearch/elasticsearch_helper.py /app/crawler_output/art_ontology.json
+#og line: docker exec elastic-dev python3 /app/upload_to_elasticsearch/elasticsearch_helper.py /art_ontology.json
